Somewhat batch large exports of HTML